Added user authentication

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,17 +5,19 @@
 
 	<body>
 
-		<h1>
-			Faker
-		</h1>
-
+		<h1>Faker</h1>
 		<a href="/categories">Check out categories.</a>
 		
-		<!-- <div>
-			<input id="message" placeholder="Type here">
-			<button id="send">Send</button>
-			<div id="output"></div>	
-		</div> -->
+		<h2>Login below.</h2>
+		
+		<form action="/" method="POST">
+			<input type="text" name="username" placeholder="username">
+			<input type="password" name="password" placeholder="password">
+			<input type="submit" value="Login">
+		</form>
+		
+		<h3>
+			<a href="/register">Register and the rules</a>			</h3>
 		
 		<script src="/sockets.js"></script>
 		
