SessionIDs tested and confirmed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,7 @@
 			<input type="submit" value="Login">
 		</form>
 		
-		<h3>
-			<a href="/register">Register and the rules</a>			</h3>
+		<h3><a href="/register">Register and the rules</a></h3>
 		
 		<script src="/sockets.js"></script>
 		
