UUID added for clientID

--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -5,5 +5,12 @@
 	<body>
 		<h1>Lobby area</h1>
 		<a href="/">Main page</a>
+		
+		<form action="/newgame/<%createID%>" method="GET">
+			<button id="newGame">New Game</button>
+		</form>
+		
+		<input id="joinGame" placeholder="Enter Game ID">
+	
 	</body>
 </html>
