--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -6,9 +6,11 @@
 		<h1>Lobby area</h1>
 		<a href="/">Main page</a>
 		
-		<form action="/newgame/<%createID%>" method="GET">
+		<form action="/newgame/createID" method="GET">
 			<button id="newGame">New Game</button>
 		</form>
+		
+		<a href="/newgame/<%=createID%>">Start New Game</a>
 		
 		<input id="joinGame" placeholder="Enter Game ID">
 	
