--- a/views/game.ejs
+++ b/views/game.ejs
@@ -5,7 +5,7 @@
 	<body>
 		<h1>Game Page!</h1>
 		
-		<h2>Send this join ID to your friends <%=createID%></h2>
+		<h2>Send this join ID to your friends </h2>
 	</body>
 </hmtl>
 
