Game and client ID on game page

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,11 +1,12 @@
 <hmtl>
 	<head>
-		
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" integrity="sha512-gVG6WRMUYFaIdoocaxbqd02p3DUbhReTBWc7NTGB96i7vONrr7GuCZJHFFmkXEhpwilIWUnfRIMSlKaApwd/jg==" crossorigin="anonymous"></script>	
 	</head>
 	<body>
 		<h1>Game Page!</h1>
 		
 		<h2>Send this join ID to your friends </h2>
 	</body>
+	<script src="/sockets.js"></script>
+	
 </hmtl>
-
