--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" integrity="sha512-gVG6WRMUYFaIdoocaxbqd02p3DUbhReTBWc7NTGB96i7vONrr7GuCZJHFFmkXEhpwilIWUnfRIMSlKaApwd/jg==" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<h1>Lobby area</h1>
@@ -12,6 +12,6 @@
 		</form>
 		
 		
-	
+	<script src="/sockets.js"></script>	
 	</body>
 </html>
