Styles added to CRUD pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,19 +1,20 @@
 <html>
-	<head>
-		
-	</head>
+	
+	<link rel="stylesheet" href="/stylesheets/cards.css">
 
 	<body>
 
-		<h1>Faker</h1>
-		<a href="/categories">Check out categories.</a>
+		<h1>FAKER</h1>
+		<h2>
+			<a href="/categories">BROWSE cards.</a>
+		</h2>
 		
-		<h2>Login below.</h2>
+		<h2>LOGIN below.</h2>
 		
 		<form action="/" method="POST">
 			<input type="text" name="username" placeholder="username">
 			<input type="password" name="password" placeholder="password">
-			<input type="submit" value="Login">
+			<button>LOGIN</button>
 		</form>
 		
 		<h3><a href="/register">Register and the rules</a></h3>
