--- a/public/stylesheets/cards.css
+++ b/public/stylesheets/cards.css
@@ -8,13 +8,40 @@ body {
     font-family: 'DM Mono', monospace;
 }
 
+main {
+	max-width: 400px;
+	margin: 1rem auto;
+}
+
 a {
     color: #ab1616;
 	text-decoration: none;
 }
 
-li {
-	list-style: none;
+button {
+	background: #ab1616; 
+	color: #fff; 
+	border: 0; 
+	padding: 8px; 
+	border-radius: 8px; 
+	cursor: pointer;
+	margin: 0 auto;
+	font-family:inherit;
+	width: 10rem;
+	/* margin: 0 auto; */
+} 
+
+input {
+	padding: 0.2rem;
+	display: block;
+	width: 300px;
+    min-width: 250px;
+	margin: 0 auto 5px;
+	border-bottom: 1px;
+	border-radius: 8px; 
+	font-family:inherit;
+	text-align: center;
+	font-weight:500;
 }
 
 .card-list {
@@ -29,7 +56,7 @@ li {
 }
 .card-list::-webkit-scrollbar-thumb {
     background: #201c29;
-    border-radius: 10px;
+    border-radius: 8px;
     box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25), inset -2px -2px 2px rgba(0,0,0,.25);
 }
 
@@ -109,4 +136,9 @@ li {
     display: block;
     overflow: hidden;
     margin: 16px 10px;
+}
+
+.show-card {
+	padding: 30px;
+	margin: 0 auto;
 }
