--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,9 @@
     </head>
 
 	<body>
+	<!-- <main> -->
 		<h1>BROWSE cards.</h1>
-		<h2><a href="/categories/new">CREATE new card.</a></h2>
+		<h2><a href="/">BACK.</a></h2>
 		<section class="card-list">
 			<% categories.forEach(function (category) { %>
 				<article class="card">
@@ -22,7 +23,10 @@
 				</article>
 			<% }); %> 
 		</section>
-	
+		
+		<h2><a href="/categories/new">CREATE card.</a></h2>
+	<!-- </main> -->
+		
 	<script src="/sockets.js"></script>	
 	<!-- <script src="/game.js"></script> -->
 	<!-- <script src="/socket.io/socket.io.js"></script> -->
