--- a/views/game.ejs
+++ b/views/game.ejs
@@ -3,28 +3,28 @@
 		<link rel="stylesheet" href="/stylesheets/cards.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" integrity="sha512-gVG6WRMUYFaIdoocaxbqd02p3DUbhReTBWc7NTGB96i7vONrr7GuCZJHFFmkXEhpwilIWUnfRIMSlKaApwd/jg==" crossorigin="anonymous"></script>	
 	</head>
+	
 	<body>
 		<h1>Game Page!</h1>
 		<h3>Send this join ID to your friends </h3>
-		<div class="ui container">
-			<h1>Choose category for the round</h1>
-		</div>
-			<div class="ui stackable grid container">
-				<% categories.forEach(function (category) { %>
-					<div class="four wide column" id='<%=category.title%>'>
-						<h2>
-							<ul> 
-							<h2><%=category.title%></h2>
-							</ul>
-							<button>
-								PICK
-							</button>
-						</h2>
-					</div>	
-				<% }); %> 
-			<div/>	
-	</body>
+		<h1>CHOOSE card for the round</h1>
+		
+		<section class="card-list">
+			<% categories.forEach(function (category) { %>
+				<article class="card" id='<%=category.title%>'>
+					<header class="card-header">
+						<h2><%=category.title%></h2>
+					</header>
+					<div class="card-author">
+          				<img class="author-avatar" src="https://cdn.pixabay.com/photo/2020/06/06/20/50/online-troll-5268149_1280.jpg" />
+					</div>
+				</article>
+			<% }); %> 
+		</section>
+		
 	<script src="/sockets.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+	<script src="/game.js"></script>
+
+	</body>
 	
 </hmtl>
