--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,16 +4,10 @@
 			Register below.
 		</h3>
 		
-		<form action="/" method="POST">
+		<form action="/register" method="POST">
 			<input type="text" name="username" placeholder="username">
 			<input type="password" name="password" placeholder="password">
 			<input type="submit" value="Register">
 		</form>
 	</body>
 </html>
-
-	<h1> Rules</h1>
-
-	<h2>To add</h2>
-
-		
