--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,14 @@
 			<button>LOGIN</button>
 		</form>
 		
-		<h3><a href="/register">Register and the rules</a></h3>
+		<h3><a href="/register">Register to play and set up your game.</a></h3> 
+		  
+		  <h2>RULES ...to find the FAKER</h2> 
+		  <p>You all pick a card.</p>
+		  <p>You all agree an item by number. Don't name it.</p>
+		  <p>You all perform a short charade.</p>
+		  <p>The catch? ...The FAKER is bluffing and only has a blank card.</p>
+		  <p>Vote on who you think the FAKER is.</p>
 			
 	</body>
 	
