--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     </head>
 
 	<body>
-	<!-- <main> -->
+	 <main>
 		<h1>BROWSE cards.</h1>
 		<h2><a href="/">BACK.</a></h2>
 		<section class="card-list">
@@ -25,7 +25,7 @@
 		</section>
 		
 		<h2><a href="/categories/new">CREATE card.</a></h2>
-	<!-- </main> -->
+	  </main>
 		
 	<script src="/sockets.js"></script>	
 	<!-- <script src="/game.js"></script> -->
