Header & footer partials added

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %> 
+<%- include("header") %> 
 
 <body>
 
@@ -29,4 +29,4 @@
 
 </body>
 
-<%- include("partials/footer") %> 
+<%- include("footer") %> 
