--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %> 
+<%- include("header") %> 
 	
 <body>
 
@@ -27,4 +27,4 @@
 
 </body>
 	
-<%- include("partials/footer") %> 
+<%- include("footer") %> 
